--- a/projects/project-2.html
+++ b/projects/project-2.html
@@ -158,6 +158,7 @@ footer{
  </div>
 </div>
 
+<!-- PROJECT NAV -->
 <div class="project-nav">
  <a href="project-1.html">← Projecto anterior</a>
  <a href="../index.html">Home</a>
@@ -217,22 +218,8 @@ const images=[
  "../assets/pb/Paisagen_pb08.jpg"
 ];
 
-/* --- TÍTULOS DAS FOTOS --- */
-const capsPT=[
- "Início",
- "Céu",
- "Passagem",
- "Entre",
- "Noite"
-];
-
-const capsEN=[
- "Beginning",
- "Sky",
- "Passage",
- "Between",
- "Night"
-];
+const capsPT=["Início","Céu","Passagem","Entre","Noite"];
+const capsEN=["Beginning","Sky","Passage","Between","Night"];
 
 let index=0;
 
@@ -246,23 +233,13 @@ function openLB(i){
 /* UPDATE */
 function updateLB(){
  lbimg.src=images[index];
- cap-pt=document.getElementById("cap-pt");
- cap-en=document.getElementById("cap-en");
- cap-pt.textContent=capsPT[index];
- cap-en.textContent=capsEN[index];
+ cap_pt.textContent=capsPT[index];
+ cap_en.textContent=capsEN[index];
 }
 
 /* NAV */
-function next(e){
- e?.stopPropagation();
- index=(index+1)%images.length;
- updateLB();
-}
-function prev(e){
- e?.stopPropagation();
- index=(index-1+images.length)%images.length;
- updateLB();
-}
+function next(e){e?.stopPropagation();index=(index+1)%images.length;updateLB();}
+function prev(e){e?.stopPropagation();index=(index-1+images.length)%images.length;updateLB();}
 
 /* CLOSE */
 function closeLB(){lb.classList.remove('active')}
