--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -185,7 +185,7 @@ footer{
 </div>
 
 <header>
-  <h1 class="lang-pt">A Última Noite</h1>
+  <h1 class="lang-pt">Last night</h1>
   <h1 class="lang-en" style="display:none;">Last Night</h1>
 
   <p class="lang-pt">Graça 2016</p>
