--- a/projects/structures-of-permanence.html
+++ b/projects/structures-of-permanence.html
@@ -273,6 +273,7 @@ const captionsPT=[
   "Urban Blue Layers",
   "Watching Itself",
   "Roof Echoes",
+  "Cathedral in Light",
   "Antenna Rhythm",
   "Sky Divide",
   "Windows in the Night"
@@ -289,6 +290,7 @@ const captionsEN=[
   "Urban Blue Layers",
   "Watching Itself",
   "Roof Echoes",
+  "Cathedral in Light",
   "Antenna Rhythm",
   "Sky Divide",
   "Windows in the Night"
