--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -188,14 +188,14 @@ footer{
   <h1 class="lang-pt">Última Noite</h1>
   <h1 class="lang-en" style="display:none;">Last Night</h1>
 
-  <p class="lang-pt">2008-2018</p>
-  <p class="lang-en" style="display:none;">2008-2018</p>
+  <p class="lang-pt">2017</p>
+  <p class="lang-en" style="display:none;">2017</p>
 </header>
 
 <section class="text">
 
   <div class="lang-pt">
-    <p><strong>Ultima Noite</strong> explora o território nocturno onde arquitectura, luz e instabilidade se encontram. As imagens sugerem momentos de fratura e suspensão, como se a cidade estivesse presa num estado frágil entre presença e colapso.</p>
+    <p><strong>Última Noite</strong> explora o território nocturno onde arquitectura, luz e instabilidade se encontram. As imagens sugerem momentos de fratura e suspensão, como se a cidade estivesse presa num estado frágil entre presença e colapso.</p>
     <p>A sequência desenrola-se como uma descida lenta, do momento de antecipação até às consequências, sem se resolver num evento claro.</p>
   </div>
 
