--- a/index.html
+++ b/index.html
@@ -105,11 +105,15 @@ footer{
 <div class="about">
 
   <div class="lang-pt">
-    <p>Nasci em 1971. A fotografia entrou cedo na minha vida como espaço de observação, escuta e experimentação. O meu trabalho desenvolve-se a partir da relação entre corpo, território e tempo, explorando estados de transição, suspensão e presença.</p>
+    <p>A minha prática fotográfica nasce da experiência direta do momento. Fotografar surge como consequência da presença, da escuta e do tempo partilhado com o espaço.</p>
+
+<p>Procuro a imagem como vestígio — não a descrição do lugar, mas o silêncio que nele permanece.</p>
   </div>
 
   <div class="lang-en">
-    <p>I was born in 1971. Photography entered my life early on as a space for observation, listening, and experimentation. My work develops through the relationship between body, territory, and time, exploring states of transition, suspension, and presence.</p>
+    <p>My photographic practice emerges from direct experience of the moment. Photographing arises as a consequence of presence, listening, and time shared with a place.</p>
+
+<p>I seek the image as a trace — not a description of a place, but the silence that remains within it.</p>
   </div>
 
 </div>
@@ -122,7 +126,7 @@ footer{
     <a href="./projects/project-2.html">Under the Same Weather</a>
     <a href="./projects/project-3.html">Inside the Sound</a>
     <a href="./projects/project-4.html">Last Night</a>
-    <a href="./projects/structures-of-permanence.html">Estruturas de Permanência</a>
+    <a href="./projects/structures-of-permanence.html">Structures of Permanence</a>
   </div>
 
   <!-- EN -->
