--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@ footer{
 <div class="about">
 
   <div class="lang-pt">
-    <p>A minha prática fotográfica nasce da experiência direta do momento. Fotografar surge como consequência da presença, da escuta e do tempo partilhado com o espaço.</p>
-
+    <p>A minha prática fotográfica nasce da experiência direta do momento, onde fotografar é um gesto de presença e escuta.</p>
 <p>Procuro a imagem como vestígio — não a descrição do lugar, mas o silêncio que nele permanece.</p>
+
   </div>
 
   <div class="lang-en">
-    <p>My photographic practice emerges from direct experience of the moment. Photographing arises as a consequence of presence, listening, and time shared with a place.</p>
-
+    <p>My photographic practice emerges from direct experience of the moment, where photographing is an act of presence and listening.</p>
 <p>I seek the image as a trace — not a description of a place, but the silence that remains within it.</p>
   </div>
 
