--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ header{
 }
 header h1{font-size:2.4rem;font-weight:400}
 header p{margin-top:12px;font-size:.95rem;opacity:.7}
+  <div style="text-align:center; margin-top:12px;">
+  <a href="about.html" style="color:#eaeaea; text-decoration:none; font-weight:400; opacity:.7;">
+    About / Sobre
+  </a>
+</div>
 
 /* LANGUAGE */
 .lang-switch{
